--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,4 +29,9 @@
         <item name="radioButtonStyle">@style/Widget.TipTime.CompoundButton.RadioButton</item>
         <item name="switchStyle">@style/Widget.TipTime.CompoundButton.Switch</item>
     </style>
+    <style name="Theme.CardList" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/blue_500</item>
+        <item name="colorPrimaryVariant">@color/blue_700</item>
+    </style>
 </resources>
